# ZERO_CHAT

./: .gitignore  CMakeLists.txt  README.md  list_users  test_ws
client/: Makefile  client  clientbot  test_websocket  test_websocket2
client/src/: ChatUI.cpp  ChatUI.h  Client.cpp  Client.h  ClientBot.cpp  Message.cpp  Message.h  WebSocket.cpp  WebSocket.h  WebUI.cpp  WebUI.h  example_usage.cpp  list_users.cpp  main.cpp  test_websocket.cpp  test_websocket2.cpp  test_ws.cpp
common/: Makefile
common/src/: Protocol.cpp  Protocol.h  test_protocol.cpp
docs/: protocol.md
scripts/: start_server.sh
server/: Makefile  server
server/src/: Message.cpp  Message.h  Server.cpp  Server.h  User.cpp  User.h  WebSocket  WebSocket.cpp  WebSocket.h  main.cpp  server  test_server.cpp
web/: index.html
web/static/css/: styles.css
web/static/js/: main.js
